enemies reduce health once they reach the end of the path

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     </section>
 
     <section class="game-section">
-        <div id="moneyCount">Coins: 100</div>
+        <article class="info">
+            <div id="moneyCount">Coins: 100</div>
+            <div id="healthCount">Health: 100</div>
+        </article>
         <canvas id="gameCanvas"></canvas>
     </section>
 
