--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <section class="game-section">
         <article class="info">
+            <div id="scoreCount">Score: 0</div>
             <div id="moneyCount">Coins: 100</div>
             <div id="healthCount">Health: 100</div>
         </article>
