updating the endgame screen and adding cool new tower sprites

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         <canvas id="gameCanvas"></canvas>
     </section>
 
+    <section class="game-over">
+        <h1 id="died">You died</h1>
+        <h3 id="final-score">Score <span id="finalScore"></span></h3><br>
+    </section>
+
     <script src="canvas.js"></script>
     <script src="tower.js"></script>
     <script src="enemy.js"></script>
