basic tower selection

--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
             <div id="healthCount">Health: 100</div>
         </article>
         <canvas id="gameCanvas"></canvas>
+        <article class="tower-select">
+            <h4 class="select-heading" style="color: red;">Select tower</h4>
+            <div class="tower-image-and-stats standard-tower" id="standard-tower">
+                <img style="width: 50px; height: auto;" src="Assets/Images/Starting-Tower.png"></img>
+                <div class="standard-tower-stats">
+                    <p>Damage: 1</p>
+                    <p>Speed: 1</p>
+                    <p>Cost: 10</p>
+                </div>
+            </div>
+        </article>
     </section>
 
     <section class="game-over">
