tower selection message

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </article>
         <canvas id="gameCanvas"></canvas>
         <article class="tower-select">
-            <h4 class="select-heading" style="color: red;">Select tower</h4>
+            <h4 class="select-heading" style="color: red;">Select Tower</h4>
             <div class="tower-image-and-stats standard-tower" id="standard-tower">
                 <img style="width: 50px; height: auto;" src="Assets/Images/Starting-Tower.png"></img>
                 <div class="standard-tower-stats">
@@ -29,6 +29,9 @@
                     <p>Cost: 10</p>
                 </div>
             </div>
+        </article>
+        <article class="no-tower-selected">
+            <h4>No Tower Selected!</h4>
         </article>
     </section>
 
