not enough money notice

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <article class="tower-select">
             <h4 class="select-heading" style="color: red;">Select Tower</h4>
             <div class="tower-image-and-stats standard-tower" id="standard-tower">
-                <img style="width: 50px; height: auto;" src="Assets/Images/Starting-Tower.png"></img>
+                <img style="height: 100px; width: auto;" src="Assets/Images/Mud-Tower.png"></img>
                 <div class="standard-tower-stats">
                     <p>Damage: 1</p>
                     <p>Speed: 1</p>
@@ -32,6 +32,9 @@
         </article>
         <article class="no-tower-selected">
             <h4>No Tower Selected!</h4>
+        </article>
+        <article class="no-money">
+            <h4>Not enough money!</h4>
         </article>
     </section>
 
