--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
                     <p>No Tower Selected!</p>
                 </div>
                 <div class="no-money">
-                    <p>Not enough money!</p>
+                    <p>Not Enough Money!</p>
+                </div>
+                <div class="tower-on-path">
+                    <p>Cannot Place Tower on Path!</p>
                 </div>
             </div>
         </footer>
