functional restart button

--- a/index.html
+++ b/index.html
@@ -59,12 +59,19 @@
                     <p>Cannot Place Tower on Path!</p>
                 </div>
             </div>
+
+            <div class="level-count">
+                <p>Level<span id="levelCount"> 1</span> of 5</p>
+            </div>
+
         </footer>
     </div>
 
     <section class="game-over">
         <h3 id="died">You died</h3> 
         <h3 id="final-score">Score <span id="finalScore"></span></h3><br>
+        <button class="restart">Restart</button>
+        <button class="main-menu">Main Menu</button>
     </section>
     
     <script src="canvas.js"></script>
