--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     </section>
 
     <div class="grid-container game-section">
-        <main class="main-content game-canvas">
-            <canvas id="gameCanvas"></canvas>
-        </main>
+        <canvas id="gameCanvas" class="main-content game-canvas">
+        </canvas>
         <aside class="sidebar right-sidebar">
             <article class="tower-select">
                 <h4 class="select-heading" style="color: red;">Select Tower</h4>
